--- a/is it Prime/Base.lproj/Main.storyboard
+++ b/is it Prime/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="is_it_Prime" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +15,88 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Is It Prime?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pom-Ax-Ygp">
+                                <rect key="frame" x="109" y="28" width="115" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="AKg-2F-FHS"/>
+                                    <constraint firstAttribute="width" constant="115" id="Co2-I8-KgJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Enter a number in the box" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zXl-JC-Re8">
+                                <rect key="frame" x="79" y="82" width="200" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="227" id="25d-s2-fKB"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="9dZ-qn-4hV"/>
+                                    <constraint firstAttribute="height" constant="21" id="BLq-d2-ECO"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="ORs-nn-5dU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="eg. 17" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dFf-Nr-kuo">
+                                <rect key="frame" x="118" y="151" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="QwH-bf-hvZ"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="ZJj-DU-QJF"/>
+                                    <constraint firstAttribute="height" constant="30" id="b5S-F2-I0J"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="97" id="f9Z-ii-jmZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TtZ-FL-7IE">
+                                <rect key="frame" x="128" y="205" width="77" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="77" id="64e-aT-G5o"/>
+                                    <constraint firstAttribute="height" constant="30" id="9wz-JO-nKm"/>
+                                </constraints>
+                                <state key="normal" title="Is it Prime?">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="primeButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="QYd-nh-xAA"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpe-o6-ygS">
+                                <rect key="frame" x="16" y="254" width="301" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="BoK-cH-stZ"/>
+                                    <constraint firstAttribute="width" constant="97" id="Ofd-Yt-ehe"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="301" id="l8k-J3-2kb"/>
+                                    <constraint firstAttribute="height" constant="21" id="oaD-9J-tvi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="dFf-Nr-kuo" secondAttribute="centerX" id="Kj4-Gv-TWn"/>
+                            <constraint firstAttribute="centerX" secondItem="Pom-Ax-Ygp" secondAttribute="centerX" id="PNO-Cy-ja4"/>
+                            <constraint firstItem="qpe-o6-ygS" firstAttribute="top" secondItem="TtZ-FL-7IE" secondAttribute="bottom" constant="19" id="PkB-sM-zVi"/>
+                            <constraint firstItem="dFf-Nr-kuo" firstAttribute="top" secondItem="zXl-JC-Re8" secondAttribute="bottom" constant="48" id="Qx1-gs-eWm"/>
+                            <constraint firstAttribute="centerX" secondItem="dFf-Nr-kuo" secondAttribute="centerX" id="R7s-Se-gdQ"/>
+                            <constraint firstAttribute="centerX" secondItem="qpe-o6-ygS" secondAttribute="centerX" id="VpN-ec-G47"/>
+                            <constraint firstItem="TtZ-FL-7IE" firstAttribute="top" secondItem="dFf-Nr-kuo" secondAttribute="bottom" constant="24" id="YA3-6e-SjL"/>
+                            <constraint firstAttribute="centerX" secondItem="TtZ-FL-7IE" secondAttribute="centerX" id="Yt8-7X-Nz9"/>
+                            <constraint firstItem="zXl-JC-Re8" firstAttribute="top" secondItem="Pom-Ax-Ygp" secondAttribute="bottom" constant="34" id="dBM-Bc-ODd"/>
+                            <constraint firstItem="zXl-JC-Re8" firstAttribute="top" secondItem="Pom-Ax-Ygp" secondAttribute="bottom" constant="34" id="eik-4d-67D"/>
+                            <constraint firstItem="Pom-Ax-Ygp" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="l7X-25-jkv"/>
+                            <constraint firstItem="qpe-o6-ygS" firstAttribute="top" secondItem="TtZ-FL-7IE" secondAttribute="bottom" constant="19" id="mJH-TD-fzW"/>
+                            <constraint firstAttribute="centerX" secondItem="qpe-o6-ygS" secondAttribute="centerX" id="uCy-56-7rd"/>
+                            <constraint firstAttribute="centerX" secondItem="zXl-JC-Re8" secondAttribute="centerX" id="xHa-To-mEh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="numberInput" destination="dFf-Nr-kuo" id="aY6-Gi-gXP"/>
+                        <outlet property="resultLabel" destination="qpe-o6-ygS" id="DiO-SF-rnJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
